bin/tests/errors/lexer/lex_err_invalid_char.swg
#global fileprivate

¤ // swc-expected-error {{lex_err_invalid_char}}
